Add system status checks on server boot
